syntax = "proto3";

package wong;

option go_package = "GogRPC/pb;proto";
option java_package = "com.wong.grpc.pb";
option java_multiple_files = true;

import "laptop.proto";
import "filter.proto";

message CreateLaptopRequest{
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}
message SearchLaptopRequest{
    Filter filter = 1;
}

message SearchLaptopResponse{
    Laptop laptop = 1;
}

message UploadImageRequest {
    oneof data {
        ImageInfo info = 1;
        bytes chunk_data = 2;
    }
}

message ImageInfo{
    string laptop_id = 1;
    string image_type = 2;
}

message UploadImageResponse{
    string id = 1;
    uint32 size = 2;
}

message RateLaptopRequest{
    string laptop_id = 1;
    double score = 2;
}

message RateLaptopResponse{
    string laptop_id = 1;
    uint32 rated_count = 2;
    double average_score = 3;
}


// run protobuf:compile-custom to generate gRPC stubs class file
service LaptopService {
    // this is unary RPC
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    // this is server-streaming RPC
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};
    // this is client-streaming RPC
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
    // this is bidirectional-streaming RPC
    rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {};
}
